--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+body 
+    display: flex
+    justify-content: center
+    font-size: 18px
+    font-family: Arial, Helvetica, sans-serif
+
+a
+    text-decoration: none
+    color: black
+
+h3
+    margin: 0
+ul 
+    padding: 0
+    margin: 0
+    list-style-type: none
