--- a/src/app/components/movie-list-item/movie-list-item.component.sass
+++ b/src/app/components/movie-list-item/movie-list-item.component.sass
@@ -1,7 +1,7 @@
 .list-item
     margin: 2rem
     display: block
-    max-width: 300px
+    width: 300px
 
 .item-info
     display: flex
@@ -9,3 +9,10 @@
 
 .poster-wrapper
     height: 29rem
+    position: relative
+
+.image
+    width: 300px
+    position: absolute
+    bottom: 3rem
+    max-height: 445px
