--- a/src/app/components/movie-list-item/movie-list-item.component.html
+++ b/src/app/components/movie-list-item/movie-list-item.component.html
@@ -2,7 +2,7 @@
 
 <a  routerLink="/detail/{{movie.imdbID}}" class="list-item">
     <div class="poster-wrapper">
-        <img [src]="movie.Poster">
+        <img class="image" *ngIf="movie.Poster != 'N/A'" [src]="movie.Poster">
     </div>
     <h3>{{ movie.Title }}</h3>
     <div class="item-info"> 
