--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,7 +3,8 @@ body
     display: flex
     justify-content: center
     font-size: 18px
-    font-family: Arial, Helvetica, sans-serif
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
 
 a
     text-decoration: none
