--- a/src/app/pages/movie-detail/movie-detail.component.html
+++ b/src/app/pages/movie-detail/movie-detail.component.html
@@ -1,36 +1,27 @@
-<section class="detail">
-  <div>
-    <img [src]="movieDetail.Poster" />
-  </div>
-  <div class="detail-col-2">
-    <h2>{{ movieDetail.Title }}</h2>
-    <div class="info">
-      <span>
-        {{ movieDetail.Year }}
-      </span>
-      <span>
-        {{ movieDetail.Runtime }}
-      </span>
-      <span>
-
-      </span>
-  
-   
-   
-<div>
-    <span>{{ movieDetail.Genre }}</span>
-    <span> ({{movieDetail.Type }})</span>
-</div>
- 
-</div>
-<div class="rateing">
-    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="30" fill="none"><path d="M60 2.578C59.837 1.258 58.849.205 57.59 0H2.434C1.055.225 0 1.466 0 2.961v24.04C0 28.657 1.29 30 2.884 30H57.14c1.467 0 2.678-1.14 2.86-2.615V2.578z" fill="#F6C700"/><path d="M7.236 6.028h4.762V24.21H7.236V6.028zM20.995 14.403l-.682-4.618c-.199-1.484-.389-2.774-.57-3.876h-6.174v18.182h4.171l.015-12.005L19.51 24.09h2.97l1.665-12.272.016 12.272h4.157V5.909h-6.22l-1.103 8.494zM36.178 9.692c.053.231.08.757.08 1.58v7.048c0 1.21-.08 1.951-.237 2.224-.159.274-.58.41-1.264.41V9.018c.519 0 .873.055 1.06.162a.75.75 0 01.361.51zm2.151 14.213c.567-.123 1.042-.34 1.429-.65.385-.31.655-.74.81-1.29.155-.548.247-1.638.247-3.268v-6.385c0-1.72-.068-2.873-.174-3.459a3.26 3.26 0 00-.793-1.598c-.423-.478-1.041-.822-1.853-1.031-.813-.21-2.138-.315-4.443-.315H30v18.182h5.768c1.33-.042 2.183-.103 2.561-.186zM48.496 21.188c-.087.231-.471.348-.761.348-.284 0-.473-.112-.569-.336-.096-.224-.143-.734-.143-1.533v-4.805c0-.828.042-1.345.126-1.55.084-.205.267-.308.551-.308.29 0 .68.117.78.352.099.235.149.737.149 1.506v4.659c-.03.957-.074 1.513-.133 1.667zm-6.06 2.744h4.287l.296-1.158c.388.466.815.816 1.283 1.048.467.233 1.165.348 1.706.348.752 0 1.4-.195 1.949-.588.547-.39.895-.855 1.043-1.388.148-.534.222-1.345.222-2.436v-5.101c0-1.097-.025-1.814-.074-2.15-.049-.336-.195-.679-.438-1.03-.243-.35-.597-.623-1.06-.818-.463-.194-1.01-.292-1.64-.292-.548 0-1.25.11-1.717.323-.466.215-.89.54-1.27.976V5.75h-4.587v18.181z" fill="#000"/></svg>
-
-
-<span>{{ movieDetail.imdbRating }}</span>
-</div>
-    <p>
-      {{ movieDetail.Plot }}
-    </p>
-  </div>
+<section *ngIf="movieDetail" class="detail">
+    <div>
+        <img [src]="movieDetail.Poster" />
+    </div>
+    <div class="column">
+        <h2 class="title">{{ movieDetail.Title }}</h2>
+        <div class="info">
+            <span>
+                {{ movieDetail.Year }}
+            </span>
+            <span>
+                {{ movieDetail.Runtime }}
+            </span>   
+            <div>
+                <span>{{ movieDetail.Genre }}</span>
+                <span> ({{movieDetail.Type }})</span>
+            </div>
+        </div>
+        <div class="rateing">
+            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="30" fill="none"><path d="M60 2.578C59.837 1.258 58.849.205 57.59 0H2.434C1.055.225 0 1.466 0 2.961v24.04C0 28.657 1.29 30 2.884 30H57.14c1.467 0 2.678-1.14 2.86-2.615V2.578z" fill="#F6C700"/><path d="M7.236 6.028h4.762V24.21H7.236V6.028zM20.995 14.403l-.682-4.618c-.199-1.484-.389-2.774-.57-3.876h-6.174v18.182h4.171l.015-12.005L19.51 24.09h2.97l1.665-12.272.016 12.272h4.157V5.909h-6.22l-1.103 8.494zM36.178 9.692c.053.231.08.757.08 1.58v7.048c0 1.21-.08 1.951-.237 2.224-.159.274-.58.41-1.264.41V9.018c.519 0 .873.055 1.06.162a.75.75 0 01.361.51zm2.151 14.213c.567-.123 1.042-.34 1.429-.65.385-.31.655-.74.81-1.29.155-.548.247-1.638.247-3.268v-6.385c0-1.72-.068-2.873-.174-3.459a3.26 3.26 0 00-.793-1.598c-.423-.478-1.041-.822-1.853-1.031-.813-.21-2.138-.315-4.443-.315H30v18.182h5.768c1.33-.042 2.183-.103 2.561-.186zM48.496 21.188c-.087.231-.471.348-.761.348-.284 0-.473-.112-.569-.336-.096-.224-.143-.734-.143-1.533v-4.805c0-.828.042-1.345.126-1.55.084-.205.267-.308.551-.308.29 0 .68.117.78.352.099.235.149.737.149 1.506v4.659c-.03.957-.074 1.513-.133 1.667zm-6.06 2.744h4.287l.296-1.158c.388.466.815.816 1.283 1.048.467.233 1.165.348 1.706.348.752 0 1.4-.195 1.949-.588.547-.39.895-.855 1.043-1.388.148-.534.222-1.345.222-2.436v-5.101c0-1.097-.025-1.814-.074-2.15-.049-.336-.195-.679-.438-1.03-.243-.35-.597-.623-1.06-.818-.463-.194-1.01-.292-1.64-.292-.548 0-1.25.11-1.717.323-.466.215-.89.54-1.27.976V5.75h-4.587v18.181z" fill="#000"/></svg>
+            <span>{{ movieDetail.imdbRating }}</span>
+        </div>
+        <p>
+            {{ movieDetail.Plot }}
+        </p>
+    </div>
 </section>
