--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,10 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+/* global styles */
+    
 body 
     display: flex
     justify-content: center
     font-size: 18px
+    margin: 0
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-
 
 a
     text-decoration: none
@@ -12,6 +13,7 @@ a
 
 h3
     margin: 0
+
 ul 
     padding: 0
     margin: 0
