--- a/src/app/pages/movie-detail/movie-detail.component.sass
+++ b/src/app/pages/movie-detail/movie-detail.component.sass
@@ -1,24 +1,27 @@
 .detail 
     display: flex
-    max-width: 1600px
-    margin-top: 120px
-   
+    max-width: 100rem
+    margin-top: 4rem
+    padding: 2rem
+    .column
+        margin-left: 2rem
+        .rateing 
+            display: flex
+            align-items: center
+            span
+                margin-left: 0.5rem
+                font-weight: bold
+                font-size: 1.25rem
+        .title
+            margin-bottom: 0.5rem
 
-.svg
-    height: 100px
+        .info
+            margin-bottom: 0.5rem
 
-.detail-col-2
-    margin-left: 2rem
-
-.rateing 
-    display: flex
-    align-items: center
-    span
-        margin-left: 8px
-        font-weight: bold
-        font-size: 20px
-h2
-    margin-bottom: 10px
-
-.info
-    margin-bottom: 8px
+@media (max-width: 800px)
+    .detail
+        flex-direction: column
+        align-items: center
+        padding: 0rem
+        .column
+            margin: 1rem
