--- a/src/app/pages/movie-detail/movie-detail.component.html
+++ b/src/app/pages/movie-detail/movie-detail.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="movieDetail" class="detail">
+<section @fade *ngIf="movieDetail" class="detail">
     <div>
         <img [src]="movieDetail.Poster" />
     </div>
