--- a/src/app/components/search-form/search-form.component.sass
+++ b/src/app/components/search-form/search-form.component.sass
@@ -1,34 +1,33 @@
 .button
-    height: 50px
-    width: 50px
+    height: 3rem
+    width: 3rem
     background: none
     border: none
     padding: 0
     cursor: pointer
-
     transition: all .2s ease-in-out
     &:hover
         transform: scale(1.3)
     &:focus 
         outline:0
+
 .input
-   
     border: none
     width: 25rem
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     font-size: 40px
-
     &:focus 
         outline:0
 
 h1
     font-size: 80px
+
 form
     border-bottom: 3px solid black
-    padding-left: 16px
+    padding-left: 1rem
     padding-right: 1rem
 
-//Chrome auto fill bacround workaround
+//Chrome auto fill background workaround
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
@@ -39,10 +38,12 @@ input:-webkit-autofill:active
 @media (max-width: 600px)
     h1
         font-size: 40px
+
     .input
         width: 10rem
         font-size: 20px
+        
     form
         border-bottom: 3px solid black
-        padding-left: 8px
-        padding-right: 8px
+        padding-left: 0.5rem
+        padding-right: 0.5rem
