--- a/src/app/pages/movie-detail/movie-detail.component.html
+++ b/src/app/pages/movie-detail/movie-detail.component.html
@@ -23,6 +23,6 @@
         <p>
             {{ movieDetail.Plot }}
         </p>
-        <app-button (onClick)="goBack()">Back</app-button>
+        <app-button (press)="goBack()">Back</app-button>
     </div>
 </section>
