--- a/src/app/pages/movie-list/components/list-item/list-item.component.html
+++ b/src/app/pages/movie-list/components/list-item/list-item.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/detail/{{movie.imdbID}}" class="list-item">
+<a *ngIf="movie" routerLink="/detail/{{movie.imdbID}}" class="list-item">
     <div class="poster-wrapper">
         <img class="poster" *ngIf="movie.Poster != 'N/A'" [src]="movie.Poster">
     </div>
