--- a/src/app/pages/movie-list/components/list-item/list-item.component.html
+++ b/src/app/pages/movie-list/components/list-item/list-item.component.html
@@ -1,10 +1,10 @@
-<a *ngIf="movie" routerLink="/detail/{{movie.imdbID}}" class="list-item">
-    <div class="poster-wrapper">
-        <img class="poster" *ngIf="movie.Poster != 'N/A'" [src]="movie.Poster">
-    </div>
-    <h3>{{ movie.Title }}</h3>
-    <div class="info"> 
-        <span> {{ movie.Year }}</span>
-        <span> {{ movie.Type }}</span>
-    </div>
+<a *ngIf="movie" routerLink="/detail/{{ movie.imdbID }}" class="list-item">
+  <div class="poster-wrapper">
+    <img class="poster" *ngIf="movie.Poster != 'N/A'" [src]="movie.Poster" />
+  </div>
+  <h3>{{ movie.Title }}</h3>
+  <div class="info">
+    <span> {{ movie.Year }}</span>
+    <span> {{ movie.Type }}</span>
+  </div>
 </a>
