--- a/src/app/components/search-form/search-form.component.sass
+++ b/src/app/components/search-form/search-form.component.sass
@@ -1,49 +1,48 @@
 .button
-    height: 3rem
-    width: 3rem
-    background: none
-    border: none
-    padding: 0
-    cursor: pointer
-    transition: all .2s ease-in-out
-    &:hover
-        transform: scale(1.3)
-    &:focus 
-        outline: 0
+  height: 3rem
+  width: 3rem
+  background: none
+  border: none
+  padding: 0
+  cursor: pointer
+  transition: all .2s ease-in-out
+  &:hover
+    transform: scale(1.3)
+  &:focus 
+    outline: 0
 
 .input
-    border: none
-    width: 25rem
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-    font-size: 40px
-    &:focus 
-        outline: 0
+  border: none
+  width: 25rem
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-size: 40px
+  &:focus 
+    outline: 0
 
 h1
-    font-size: 80px
+  font-size: 80px
 
 form
-    border-bottom: 3px solid black
-    padding-left: 1rem
-    padding-right: 1rem
+  border-bottom: 3px solid black
+  padding-left: 1rem
+  padding-right: 1rem
 
-//Chrome auto fill background workaround
+//Chrome auto-fill background workaround
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active  
-    -webkit-box-shadow: 0 0 0 30px white inset !important
-
+  -webkit-box-shadow: 0 0 0 30px white inset !important
 
 @media (max-width: 600px)
-    h1
-        font-size: 40px
+  h1
+    font-size: 40px
 
-    .input
-        width: 10rem
-        font-size: 20px
-        
-    form
-        border-bottom: 3px solid black
-        padding-left: 0.5rem
-        padding-right: 0.5rem
+  .input
+    width: 10rem
+    font-size: 20px
+    
+  form
+    border-bottom: 3px solid black
+    padding-left: 0.5rem
+    padding-right: 0.5rem
